--- a/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/introduccion-html/index.html
+++ b/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/introduccion-html/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="https://img.icons8.com/color/48/html-5--v1.png" type="image/png">
   <title>Introducicon HTML</title>
 </head>
+
 <body>
   <header>
-    <!-- Muy mla para el SEO empezar por la etiqueta H·, siempre h1, h2, h3 -->
-    <h3><u>María Eugenia Costa</u></h3>
+    <h1>Ejercicios de Introduccion a HTML</h1>
   </header>
   <main>
-    <address>
-      <bold>Población:</bold> Argentina<br>
-      <bold>Provincia:</bold> Buenos Aires<br>
-      <bold>Dirección:</bold> Intendente Tomkinson <br>
-      <bold>Correo:</bold> costamariaeugenia1@gmail.com <br>
-      <bold>Teléfono:</bold> + 54 11 1111 2222<br>
-    </address>
-    <hr>
+    <section id="ejercicio-1">
+      <h2>Ejercicio 1</h2>
+      <hr>
+      <h3><u>María Eugenia Costa</u></h3>
+      <address>
+        <bold>Población:</bold> Argentina<br>
+        <bold>Provincia:</bold> Buenos Aires<br>
+        <bold>Dirección:</bold> Intendente Tomkinson <br>
+        <bold>Correo:</bold> <u>costamariaeugenia1@gmail.com </u><br>
+        <bold>Teléfono:</bold> + 54 11 1111 2222<br>
+      </address>
+      <hr>
+    </section>
+    <section id="ejercicio-2">
+      <h2>Ejercicio 2</h2>
+      <p>3<sup>e</sup> x 10<sup>e</sup> = 27000</p>
+      <p>Calle Juan Pescador n<sup>º</sup> 52</p>
+      <p>Oxigeno es igual a O<sub>2</sub></p>
+      <p><q>En la vida hay algo peor que el fracaso: el no haber intentado nada.</q> Franklin D. Roosvelt</p>
+      <p>La <abbr title="Organización de las Naciones Unidas">ONU</abbr> es una organización internacional</p>
+      <p>Para guardar un archivo en sublime text pulsa <kbd>ctr+</kbd></p>
+    </section>
   </main>
 </body>
+
 </html>
