-maneras de aplicar estilos css

--- a/01-desarrollo-front-end/curso/css/introduccion-a-css/maneras-de-insertar-css.html
+++ b/01-desarrollo-front-end/curso/css/introduccion-a-css/maneras-de-insertar-css.html
@@ -4,9 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="https://img.icons8.com/color/30/css3.png" type="image/png">
+  <link rel="stylesheet" href="./estilos.css">
   <title>SManeras de insertar CSS</title>
+  <style>
+    #interno {
+      color: palevioletred;
+    }
+  </style>
 </head>
 <body>
-  
+  <p style="color: mediumturquoise">Estilo en línea</p>
+  <p id="interno">Estilo interno</p>
+  <p id="externo">Estilo externo</p>
 </body>
 </html>
