--- a/01-desarrollo-front-end/curso/css/introduccion-a-css/comportamiento-de-visualizacion.html
+++ b/01-desarrollo-front-end/curso/css/introduccion-a-css/comportamiento-de-visualizacion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,7 @@
       background-color: #b3a9a9;
       width: 480px;
       height: 50px;
-      margin:30px;
+      margin: 30px;
       padding-bottom: 30px;
     }
 
@@ -27,11 +28,21 @@
     }
   </style>
 </head>
+
 <body>
-  <p>Este elemento es un párrafo, por defecto está en display: block, <span class="di">este elemento es un span, por defecto esta en display: inline,</span> como ves se mantiene en su línea.</p>
-  <hr>
-  <p>Este elemento es un párrafo, por defecto está en display: block, <span class="dib">este elemento es un span, por defecto esta en display: inline-block,</span> como ves se mantiene en su línea.</p>
-  <hr>
-  <p>Este elemento es un párrafo, por defecto está en display: block, <span class="db">este elemento es un span, por defecto esta en display: block,</span> como ves se mantiene en su línea.</p>
+  <header>
+    <h1>Comportameinto de visualización</h1>
+  </header>
+  <main>
+    <p>Este elemento es un párrafo, por defecto está en display: block, <span class="di">este elemento es un span, por
+        defecto esta en display: inline,</span> como ves se mantiene en su línea.</p>
+    <hr>
+    <p>Este elemento es un párrafo, por defecto está en display: block, <span class="dib">este elemento es un span, por
+        defecto esta en display: inline-block,</span> como ves se mantiene en su línea.</p>
+    <hr>
+    <p>Este elemento es un párrafo, por defecto está en display: block, <span class="db">este elemento es un span, por
+        defecto esta en display: block,</span> como ves se mantiene en su línea.</p>
+  </main>
 </body>
+
 </html>
