--- a/01-desarrollo-front-end/curso/css/introduccion-a-css/selectores-simples.html
+++ b/01-desarrollo-front-end/curso/css/introduccion-a-css/selectores-simples.html
@@ -20,6 +20,8 @@
     /* Selector por calsse, con . */
     .p1 { font-size: 24px; }
     .p2 { font-size: 30px;}
+    /* Agrupando elementos  */
+    .p1, .p2 { color: white;}
     
   </style>
 </head>
