--- a/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/introduccion-css/ejercicio-2.html
+++ b/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/introduccion-css/ejercicio-2.html
@@ -21,9 +21,13 @@
       border-radius: 7px;
       margin-bottom: 2rem;
     }
-    address+hr {border: 2px solid yellow;}
+
+    address+hr {
+      border: 2px solid yellow;
+    }
   </style>
 </head>
+
 <body>
   <hr>
   <h3><u>María Eugenia Costa</u></h3>
@@ -36,4 +40,5 @@
   </address>
   <hr>
 </body>
+
 </html>
