-feat: alto y ancho

--- a/01-desarrollo-front-end/curso/css/dimensiones/ancho-maximo-y-minimo.html
+++ b/01-desarrollo-front-end/curso/css/dimensiones/ancho-maximo-y-minimo.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ancho maximo y minimo</title>
+  <title>Ancho máximo y minimo</title>
+  <style>
+    p {
+      background-color: #ddd;
+      margin: auto;
+      margin-bottom: 20px;
+    }
+    .p-1 {
+      width: 1000px;
+    }
+    .p-2 {
+      max-width: 1000px;
+    }
+
+    .p-3 {
+      max-width: 1000px;
+      min-width: 800px;
+    }
+  </style>
 </head>
 <body>
-  
+  <header>
+    <h1>Ancho máximo y minimo</h1>
+  </header>
+  <main>
+    <p class="p-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident amet asperiores tempora sapienter
+      reprehenderit, repellat quam tenetur eius earum? Sapiente, enim dicta nisi earum facilis natus animi et maxime
+      pariatur.</p>
+    <p class="p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident amet asperiores tempora sapiente
+      reprehenderit, repellat quam tenetur eius earum? Sapiente, enim dicta nisi earum facilis natus animi et maxime
+      pariatur.</p>
+    <p class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident amet asperiores tempora sapiente
+      reprehenderit, repellat quam tenetur eius earum? Sapiente, enim dicta nisi earum facilis natus animi et maxime
+      pariatur.</p>
+  </main>
 </body>
+
 </html>
