--- a/01-desarrollo-front-end/curso/css/dimensiones/alto-maximo-y-minimo.html
+++ b/01-desarrollo-front-end/curso/css/dimensiones/alto-maximo-y-minimo.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alto maximo y minimo</title>
+  <title>Alto máximo y mínimo</title>
 </head>
 <body>
-  
+  <header>
+    <h1>Alto máximo y mínimo</h1>
+  </header>
+  <main>
+    
+  </main>
 </body>
 </html>
