-feat: medidas absolutas

--- a/01-desarrollo-front-end/curso/css/dimensiones/medidas-absolutas.html
+++ b/01-desarrollo-front-end/curso/css/dimensiones/medidas-absolutas.html
@@ -4,8 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Medidas absolutas</title>
+  <style>
+    p {
+      background-color: cadetblue;
+    }
+
+    .px {
+      width: 100px;
+      height: 100px;
+    }
+
+    .cm {
+      width: 3cm;
+      height: 3cm;
+    }
+
+    .mm {
+      width: 16mm;
+      height: 16mm;
+    }
+
+    .in {
+      width: 2in;
+      height: 2in;
+    }
+
+    .pt {
+      width: 200pt;
+      height: 200pt;
+    }
+  </style>
 </head>
 <body>
-  
+  <header>
+    <h1>Medidas absolutas</h1>
+     <h2>No cambian de tamaño, independientemente de las dimensiones del navegador</h2>
+  </header>
+  <main>
+    <p class="px">100px X 100px</p>
+    <p class="cm">3cm X 3cm</p>
+    <p class="mm">16mm X 16mm</p>
+    <p class="in">2in X 2in</p>
+    <p class="pt">200pt x 200px</p>
+  </main>
 </body>
 </html>
