-feat: dimensiones del texto

--- a/01-desarrollo-front-end/curso/css/dimensiones/dimensiones-del-texto.html
+++ b/01-desarrollo-front-end/curso/css/dimensiones/dimensiones-del-texto.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dimensiones del texto</title>
+  <style>
+    P {
+      text-align: center;
+    }
+
+    .a {
+      font-size: large;
+    }
+
+    .b {
+      font-size: x-large;
+    }
+
+    .c {
+      font-size: xx-large;
+    }
+
+    .d {
+      font-size: small;
+    }
+
+    .e {
+      font-size: x-small;
+    }
+
+    .f {
+      font-size: xx-small;
+    }
+
+    .cm {
+      font-size: 0.6cm;
+    }
+
+    .mm {
+      font-size: 5mm;
+    }
+
+    .in {
+      font-size: 0.1in;
+    }
+
+    .pt {
+      font-size: 10pt;
+    }
+
+    .px {
+      font-size: 32px;
+    }
+  </style>
 </head>
+
 <body>
-  
+  <header>
+    <h1>Dimensiones del texto</h1>
+  </header>
+  <main>
+    <p>Texto de referencia: texto de tamaño
+      <span class="a">grande</span>
+      <span class="b">extra grande</span>
+      <span class="c">mega grande</span>
+    </p>
+    <p>Texto de referencia: texto de tamaño
+      <span class="d">pequeño</span>
+      <span class="e">extra pequeño</span>
+      <span class="f">mega pequeño</span>
+    </p>
+    <p>Texto de referencia: texto de tamaño
+      <span class="cm">texto en: cm</span>
+      <span class="mm">texto en: mm</span>
+      <span class="in">texto en: in</span>
+      <span class="pt">texto en: pt</span>
+      <span class="px">texto en: px</span>
+    </p>
+  </main>
 </body>
 </html>
