-feat: dimensiones del texto

--- a/01-desarrollo-front-end/curso/css/dimensiones/dimensiones-del-texto.html
+++ b/01-desarrollo-front-end/curso/css/dimensiones/dimensiones-del-texto.html
@@ -53,6 +53,26 @@
     .px {
       font-size: 32px;
     }
+
+    .vh {
+      font-size: 10vh;
+    }
+
+    .vw {
+      font-size: 10vw;
+    }
+
+    .vmin {
+      font-size: 10vmin;
+    }
+
+    .vmax {
+      font-size: 10vmax;
+    }
+
+    .porcentaje {
+      font-size: 10%;
+    }
   </style>
 </head>
 
@@ -78,6 +98,12 @@
       <span class="pt">texto en: pt</span>
       <span class="px">texto en: px</span>
     </p>
+    <p class="vh">Texto relativo en: vh</p>
+    <p class="vw">Texto relativo en: vw</p>
+    <p class="vmin">Texto relativo en: vmin</p>
+    <p class="vmax">Texto relativo en</p>
+    <p class="porcentaje">Texto relativo en: %</p>
   </main>
 </body>
+
 </html>
