--- a/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/bordes-y-contorno/estilo-ancho-y-color-del-borde.html
+++ b/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/bordes-y-contorno/estilo-ancho-y-color-del-borde.html
@@ -15,34 +15,50 @@
 
     .p1 {
       border-style: solid;
+      border-width: thin;
+      border-color: blue;
     }
 
     .p2 {
       border-style: dotted;
+      border-width: medium;
+      border-color: blueviolet;
     }
 
     .p3 {
       border-style: dashed;
+      border-width: thick;
+      border-color: skyblue;
     }
 
     .p4 {
       border-style: double;
+      border-width: 10px;
+      border-color: #fff;
     }
 
     .p5 {
       border-style: groove;
+      border-width: 10px;
+      border-color: #000;
     }
 
     .p6 {
       border-style: ridge;
+      border-width: 2vw;
+      border-color: rgba(255, 0, 0.5);
     }
 
     .p7 {
       border-style: inset;
+      border-width: 2vh;
+      border-color: rgba(0,255,0.5);
     }
 
     .p8 {
       border-style: outset;
+      border-width: .2in;
+      border-color: rgba(0,0,255);
     }
   </style>
 </head>
