-feat: lados del borde

--- a/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/bordes-y-contorno/lados-del-borde.html
+++ b/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/bordes-y-contorno/lados-del-borde.html
@@ -4,13 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lados del borde</title>
+  <style>
+    p {
+      width: 250px;
+      background-color: dodgerblue;
+      padding: 10px;
+      margin: 5px;
+    }
+    .p1{
+      border-top-style: solid;
+      border-top-width: thick;
+      border-top-color: skyblue;
+    }
+    .p2{
+      border-bottom-style: dashed;
+      border-bottom-width: 10px;
+      border-bottom-color: #fff;
+    }
+    .p3{
+      border-left-style: dotted;
+      border-left-width: 10px;
+      border-left-color: white;
+    }
+    .p4{
+      border-right-style: double;
+      border-right-width: thick;
+      border-right-color: #ddd;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Lados del borde</h1>
   </header>
   <main>
-    
+    <p class="p1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, soluta? Animi atque possimus exercitationem fugiat quaerat! Dolorem assumenda dolorum ea odit facere numquam quo ratione aliquam dolore labore, esse consectetur.</p>
+    <p class="p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, soluta? Animi atque possimus exercitationem fugiat quaerat! Dolorem assumenda dolorum ea odit facere numquam quo ratione aliquam dolore labore, esse consectetur.</p>
+    <p class="p3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, soluta? Animi atque possimus exercitationem fugiat quaerat! Dolorem assumenda dolorum ea odit facere numquam quo ratione aliquam dolore labore, esse consectetur.</p>
+    <p class="p4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, soluta? Animi atque possimus exercitationem fugiat quaerat! Dolorem assumenda dolorum ea odit facere numquam quo ratione aliquam dolore labore, esse consectetur.</p>
   </main>
 </body>
 </html>
