-feat propiedad abreviada de los bordes

--- a/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/bordes-y-contorno/propiedad-abreviada-para-bordes.html
+++ b/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/bordes-y-contorno/propiedad-abreviada-para-bordes.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Propiedad abreviada para bordes</title>
+  <style>
+    p {
+      width: 250px;
+      background-color: dodgerblue;
+      padding: 10px;
+      margin: 10px;
+    }
+
+    .p1 {
+      border: solid thick skyblue;
+    }
+
+    .p2 {
+      dashed 20px #fff;
+    }
+
+    .p3 {
+      dotted 10px white;
+    }
+
+    .p4 {
+      double thick #ddd;
+    }
+
+    .p5 {
+      solid thick blue;
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <h1>Propiedad abreviada para bordes</h1>
   </header>
   <main>
-    
+    <p class="p1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, soluta? Animi atque possimus
+      exercitationem fugiat quaerat! Dolorem assumenda dolorum ea odit facere numquam quo ratione aliquam dolore labore,
+      esse consectetur.</p>
+    <p class="p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, soluta? Animi atque possimus
+      exercitationem fugiat quaerat! Dolorem assumenda dolorum ea odit facere numquam quo ratione aliquam dolore labore,
+      esse consectetur.</p>
+    <p class="p3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, soluta? Animi atque possimus
+      exercitationem fugiat quaerat! Dolorem assumenda dolorum ea odit facere numquam quo ratione aliquam dolore labore,
+      esse consectetur.</p>
+    <p class="p4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, soluta? Animi atque possimus
+      exercitationem fugiat quaerat! Dolorem assumenda dolorum ea odit facere numquam quo ratione aliquam dolore labore,
+      esse consectetur.</p>
+    <p class="p5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, soluta? Animi atque possimus
+      exercitationem fugiat quaerat! Dolorem assumenda dolorum ea odit facere numquam quo ratione aliquam dolore labore,
+      esse consectetur.</p>
   </main>
 </body>
+
 </html>
