--- a/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/bordes-y-contorno/propiedad-abreviada-para-contorno.html
+++ b/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/bordes-y-contorno/propiedad-abreviada-para-contorno.html
@@ -3,14 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Propiedad abreviada para contorno</title>
+  <title>Propiedades abreviadas para contorno</title>
+  <style>
+    /* Para el outline como minimo dene estar outline-style,
+     las otras dos son opcionales */
+    p {
+      width: 250px;
+      background-color: dodgerblue;
+      padding: 10px;
+      margin: 10px;
+    }
+
+    .p1 {
+      border-style: solid;
+      border-width: thin;
+      border-color: blue;
+      outline: solid thin red;
+    }
+
+    .p2 {
+      border-style: dotted;
+      border-width: medium;
+      border-color: blueviolet;
+      outline: dotted medium red;
+    }
+
+    .p3 {
+      border-style: dashed;
+      border-width: thick;
+      border-color: skyblue;
+      outline: dashed thick red;
+    }
+
+    .p4 {
+      border-style: double;
+      border-width: 10px;
+      border-color: #fff;
+      outline: double 10px red;
+    }
+
+    .p5 {
+      border-style: groove;
+      border-width: 10px;
+      border-color: #000;
+      outline: groove 10px red;
+    }
+
+    .p6 {
+      border-style: ridge;
+      border-width: 2vw;
+      border-color: rgba(255, 0, 0.5);
+      outline: ridge 2vw red;
+    }
+
+    .p7 {
+      border-style: inset;
+      border-width: 2vh;
+      border-color: rgba(0,255,0.25);
+      outline: inset 2vh red;
+    }
+
+    .p8 {
+      border-style: outset;
+      border-width: .2in;
+      border-color: rgba(0,0,255);
+      outline: outset .2in red;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Propiedad abreviada para contorno</h1>
+    <h1>Propiedades abreviadas para contorno</h1>
   </header>
   <main>
-    
+    <p class="p1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate iure sit officiis id? Veniam
+      similique voluptatum nulla enim magnam libero iste expedita vero quaerat reprehenderit, aliquam exercitationem,
+      nihil autem fugit.</p>
+    <p class="p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate iure sit officiis id? Veniam
+      similique voluptatum nulla enim magnam libero iste expedita vero quaerat reprehenderit, aliquam exercitationem,
+      nihil autem fugit.</p>
+    <p class="p3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate iure sit officiis id? Veniam
+      similique voluptatum nulla enim magnam libero iste expedita vero quaerat reprehenderit, aliquam exercitationem,
+      nihil autem fugit.</p>
+    <p class="p4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate iure sit officiis id? Veniam
+      similique voluptatum nulla enim magnam libero iste expedita vero quaerat reprehenderit, aliquam exercitationem,
+      nihil autem fugit.</p>
+    <p class="p5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate iure sit officiis id? Veniam
+      similique voluptatum nulla enim magnam libero iste expedita vero quaerat reprehenderit, aliquam exercitationem,
+      nihil autem fugit.</p>
+    <p class="p6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate iure sit officiis id? Veniam
+      similique voluptatum nulla enim magnam libero iste expedita vero quaerat reprehenderit, aliquam exercitationem,
+      nihil autem fugit.</p>
+    <p class="p7">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate iure sit officiis id? Veniam
+      similique voluptatum nulla enim magnam libero iste expedita vero quaerat reprehenderit, aliquam exercitationem,
+      nihil autem fugit.</p>
+    <p class="p8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate iure sit officiis id? Veniam
+      similique voluptatum nulla enim magnam libero iste expedita vero quaerat reprehenderit, aliquam exercitationem,
+      nihil autem fugit.</p>
   </main>
 </body>
 </html>
