--- a/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/bordes-y-contorno/bordes-redondeados.html
+++ b/01-desarrollo-front-end/curso/ejercicios/ejercicios-basicos/bordes-y-contorno/bordes-redondeados.html
@@ -1,16 +1,102 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bordes redondeados</title>
+  <style>
+    p {
+      width: 250px;
+      background-color: dodgerblue;
+      padding: 10px;
+      margin: 5px;
+      border: 2px sollid #666;
+    }
+
+    .p1 {
+      /* 
+      10px: top-left, top-right, bottom-right, bottom-left
+      */
+      border-radius: 10px;
+    }
+
+    .p2 {
+      /* 
+      10px: top-left & bottom-right
+      50px: top-right & bottom-left
+      */
+      border-radius: 10px 50px;
+    }
+
+    .p3 {
+      /*
+      10px: top-left
+      50px: top-right & bottom-left
+      0: bottom-right
+      */
+      border-radius: 10px 50px 0;
+    }
+
+    .p4 {
+      /*
+      10px: top-left
+      50px: top-right
+      0: bottom-right
+      o: bottom-left
+      */
+      border-radius: 10px 50px 0 0;
+    }
+
+    /* Aplico a un solo borde de los cuatro*/
+    .p5 {
+      border-top-left-radius: 10%;
+    }
+
+    .p6 {
+      border-top-right-radius: 20%;
+    }
+
+    .p7 {
+      border-bottom-left-radius: 30%;
+    }
+
+    .p8 {
+      border-bottom-right-radius: 40%;
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <h1>Bordes redondeados</h1>
   </header>
   <main>
-    
+    <p class="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere blanditiis ut sint possimus! Delectus
+      saepe quod assumenda perferendis modi tenetur, beatae nostrum nemo amet pariatur voluptatum illo sapiente velit?
+      Sequi.</p>
+    <p class="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere blanditiis ut sint possimus! Delectus
+      saepe quod assumenda perferendis modi tenetur, beatae nostrum nemo amet pariatur voluptatum illo sapiente velit?
+      Sequi.</p>
+    <p class="p3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere blanditiis ut sint possimus! Delectus
+      saepe quod assumenda perferendis modi tenetur, beatae nostrum nemo amet pariatur voluptatum illo sapiente velit?
+      Sequi.</p>
+    <p class="p4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere blanditiis ut sint possimus! Delectus
+      saepe quod assumenda perferendis modi tenetur, beatae nostrum nemo amet pariatur voluptatum illo sapiente velit?
+      Sequi.</p>
+    <p class="p5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere blanditiis ut sint possimus! Delectus
+      saepe quod assumenda perferendis modi tenetur, beatae nostrum nemo amet pariatur voluptatum illo sapiente velit?
+      Sequi.</p>
+    <p class="p6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere blanditiis ut sint possimus! Delectus
+      saepe quod assumenda perferendis modi tenetur, beatae nostrum nemo amet pariatur voluptatum illo sapiente velit?
+      Sequi.</p>
+    <p class="p7">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere blanditiis ut sint possimus! Delectus
+      saepe quod assumenda perferendis modi tenetur, beatae nostrum nemo amet pariatur voluptatum illo sapiente velit?
+      Sequi.</p>
+    <p class="p8">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere blanditiis ut sint possimus! Delectus
+      saepe quod assumenda perferendis modi tenetur, beatae nostrum nemo amet pariatur voluptatum illo sapiente velit?
+      Sequi.</p>
   </main>
 </body>
+
 </html>
